tests/ui/suggestions/issue-71394-no-from-impl.stderr
error[E0277]: the trait `Into<&[i8]>` is not implemented for `&[u8]`
  --> $DIR/issue-71394-no-from-impl.rs:8:25
   |
LL |     let _: &[i8] = data.into();
   |                         ^^^^ the trait `Into<&[i8]>` is not implemented for `&[u8]`, which is required by `&[u8]: Into<_>`
   |
   = note: required for `&[u8]` to implement `Into<&[i8]>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
